package be.intecbrussel.shoppinglist.model;

public enum Role {
    ADMIN,
    NORMAL
}
